2000-03-09  Chris Morley  <cmorley@vermontel.net>

	* Ensure that lighting is turned back on when rendering Appearance nodes,
	so not all geometry following a missing Material node is unlit (problem
	reported by Michael Louka).

2000-03-09  Chris Morley  <cmorley@vermontel.net>

	* Fix elevationGrid color/normal per vertex.

2000-03-08  Chris Morley  <cmorley@vermontel.net>

	* Don't attempt to render null strings. Duh.

2000-03-07  Braden McDaniel <braden@endoframe.com>
        * Made Viewer's protected member functions computeCylinder,
          computeExtrusion, computeSphere, and computeView all static, as there
          seems no reason for them not to be.

2000-03-07  Chris Morley  <cmorley@vermontel.net>

	* Apply textures to cone and cylinder tops & bottoms.

2000-01-23  Braden McDaniel <braden@endoframe.com>

        * Patch from Stuart Anderson <anderson@metrolink.com> applied to lookat
          to correct floating point handling on FreeBSD.

2000-01-21  Braden McDaniel <braden@endoframe.com>

        * JavaScript 1.5 beta 1 has been added to the project and incorporated
          into the GNU build, replacing the Arbitrary CVS Snapshot that had been
          in use.

2000-01-19  S. K. Bose <bose@pavan.barc.ernet.in>

        * Incorporated additions in System.cpp to support "http" under windows 
	  and also replaced "System::" with "theSystem->" to support virtual 
          function-call mechanism.
 
2000-01-16  Braden McDaniel <braden@endoframe.com>

        * Submissions from S. K. Bose <bose@pavan.barc.ernet.in>: Added "std::"
          in a number of places where it was needed, as well as conditional
          inclusion of the file "winconfig.h" (which now resides in
          libvrml97core/win32) for the MS Visual C++ Windows build.

2000-01-03  Braden McDaniel <braden@endoframe.com>

        * In lbvrml97core, changed the toString() function in ScriptJS.cpp to
          use the standard, cross-platform means of freeing the buffer required